Run Perfmonkey tests on https://free.gotomeeting.com

--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"https://free.gotomeeting.com","creator":"http://perfmonkey.com","rand":0.40220666700042784,"created_at":"2014-07-06T20:22:07.276Z"}
